avoided response messages from formatting in dark mode

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -3,7 +3,7 @@ body {
     background-color: rgba(0, 0, 0, 0.9);
   }
   
-  * {
+  *:not(h6) {
     color: white !important;
   }
   
